--- a/special_sources/special-template/css/style.css
+++ b/special_sources/special-template/css/style.css
@@ -13,3 +13,224 @@ ul,ol,li {
 a {
 	text-decoration: none;
 }
+
+.wrap {
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+	box-sizing: border-box;
+	background: linear-gradient(45deg, #ac8bef, #2ddbdc);
+}
+
+.wrap h1 {
+	position: absolute;
+	top:70px;
+	left: 50px;
+	font: normal 24px 'orbitron';
+	color: #fff;
+	letter-spacing: 1px;
+}
+
+.wrap h1 span {
+	opacity: 0.8;
+}
+
+.wrap .auto {
+	z-index: 20;
+	position: absolute;
+	bottom: 60px;
+	left: 60px;
+}
+
+.wrap .auto li {
+	float: left;
+	margin-right: 20px;
+	cursor: pointer;
+	color: #fff;
+	font-size: 20px;
+	opacity: 0.9;
+	transition: all .5s;
+	-webkit-transition: all .5s;
+	-moz-transition: all .5s;
+	-ms-transition: all .5s;
+	-o-transition: all .5s;
+}
+
+.wrap .auto li:hover {
+	opacity: 1;
+	transform: scale(1.4);
+	-webkit-transform: scale(1.4);
+	-moz-transform: scale(1.4);
+	-ms-transform: scale(1.4);
+	-o-transform: scale(1.4);
+}
+
+.wrap .swiper-wrapper {
+	width: 100%;
+	height: 100%;
+}
+
+.wrap .swiper-wrapper .swiper-slide {
+	position: relative;
+	top: 50%;
+	width: 500px;
+	height: 500px;
+	margin-top: -230px;
+}
+
+.wrap .swiper-wrapper .swiper-slide .inner {
+	width: 100%;
+	height: 100%;
+	background: #fff;
+	padding: 30px;
+	box-sizing: border-box;
+	opacity: 0.4;
+	transition: 1s;
+	-webkit-transition: 1s;
+	-moz-transition: 1s;
+	-ms-transition: 1s;
+	-o-transition: 1s;
+}
+
+.wrap .swiper-wrapper .swiper-slide .inner .con {
+	z-index: 10;
+	position: relative;
+}
+
+.wrap .swiper-wrapper .swiper-slide .inner .con img {
+	width: 100%;
+}
+
+.wrap .swiper-wrapper .swiper-slide .inner .con h2 {
+	font: normal 40px 'roboto';
+	color: #111;
+	margin-top: 15px;
+	margin-bottom: 20px;
+}
+
+.wrap .swiper-wrapper .swiper-slide .inner .con h2:after {
+	content: '';
+	display: block;
+	width: 30px;
+	height: 1px;
+	background: #888;
+	margin-top: 15px;
+	transition: 1s .5s;
+	-webkit-transition: 1s .5s;
+	-moz-transition: 1s .5s;
+	-ms-transition: 1s .5s;
+	-o-transition: 1s .5s;
+}
+
+.wrap .swiper-wrapper .swiper-slide-active .inner .con h2::after {
+	width: 100px;
+}
+
+.wrap .swiper-wrapper .swiper-slide .inner .con p {
+	font: normal 13px 'arial';
+	line-height: 1.3;
+	color: #aaa;
+	letter-spacing: 1px;
+}
+
+.wrap .swiper-button-prev {
+	top: auto;
+	left: auto;
+	right: 100px;
+	bottom: 50px;
+	filter: grayscale(100%) brightness(3);
+	-webkit-filter: grayscale(100%) brightness(3);
+	transform: scale(0.5);
+	-webkit-transform: scale(0.5);
+	-moz-transform: scale(0.5);
+	-ms-transform: scale(0.5);
+	-o-transform: scale(0.5);
+}
+
+.wrap .swiper-button-next {
+	top: auto;
+	left: auto;
+	right: 60px;
+	bottom: 50px;
+	filter: grayscale(100%) brightness(3);
+	-webkit-filter: grayscale(100%) brightness(3);
+	transform: scale(0.5);
+	-webkit-transform: scale(0.5);
+	-moz-transform: scale(0.5);
+	-ms-transform: scale(0.5);
+	-o-transform: scale(0.5);
+}
+
+.swiper-pagination-fraction {
+	bottom: auto;
+	top: 50px;
+	left: auto;
+	right: 50px;
+	width: auto;
+	font-size: 16px;
+	font-family: 'orbitron';
+	letter-spacing: 1px;
+	color: #fff;
+}
+
+.swiper-pagination-fraction span:nth-of-type(1) {
+	font-size: 30px;
+	color: #fff;
+}
+
+.wrap .swiper-wrapper .swiper-slide-active .inner {
+	opacity: 1;
+	box-shadow: 0 0 50px rgba(255, 255, 255, 0.8);
+}
+
+.wrap .swiper-wrapper .swiper-slide .inner::before,
+.wrap .swiper-wrapper .swiper-slide .inner::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: block;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	background: #fff;
+}
+
+.wrap .swiper-wrapper .swiper-slide-prev .inner,
+.wrap .swiper-wrapper .swiper-slide-next .inner {
+	opacity: 0.7;
+}
+
+
+@keyframes ani {
+	0% {
+		opacity: 0;
+		transform: scale(1);
+		-webkit-transform: scale(1);
+		-moz-transform: scale(1);
+		-ms-transform: scale(1);
+		-o-transform: scale(1);
+	}
+	1% {
+		opacity: 0.5;
+	}
+	100% {
+		opacity: 0;
+		transform: scale(1.4);
+		-webkit-transform: scale(1.4);
+		-moz-transform: scale(1.4);
+		-ms-transform: scale(1.4);
+		-o-transform: scale(1.4);
+	}
+}
+
+.wrap .swiper-wrapper .swiper-slide-active .inner::before {
+	animation: ani 1s ease 1;
+	-webkit-animation: ani 1s ease 1;
+}
+
+.wrap .swiper-wrapper .swiper-slide-active .inner::after {
+	animation: ani 1s ease .3s 1;
+	-webkit-animation: ani 1s ease .3s 1;
+}
